--- a/crates/test-utils/Cargo.toml
+++ b/crates/test-utils/Cargo.toml
@@ -38,8 +38,12 @@ multiaddr = "0.17.0"
 
 mysten-network.workspace = true
 
+move-binary-format.workspace = true
 move-core-types.workspace = true
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 [target.'cfg(msim)'.dependencies]
 sui-simulator = { path = "../sui-simulator" }
+
+[dev-dependencies]
+sui-macros = { path = "../sui-macros" }
