--- a/crates/sui-benchmark/src/orchestrator/assets/settings.json
+++ b/crates/sui-benchmark/src/orchestrator/assets/settings.json
@@ -2,7 +2,7 @@
     "testbed": "alberto",
     "token_file": "/Users/alberto/.vultr",
     "ssh_private_key_file": "/Users/alberto/.ssh/vultr",
-    "regions": ["bom", "lax", "atl", "lhr", "mel", "nrt"],
+    "regions": ["lax", "atl", "lhr", "mel", "nrt"],
     "specs": "vhp-8c-16gb-intel",
     "repository": {
         "name": "sui",
