--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -36,6 +36,7 @@ roaring = "0.10.1"
 enum_dispatch = "^0.3"
 eyre = "0.6.8"
 multiaddr = "0.17.0"
+indexmap = "1.9.2"
 
 move-binary-format.workspace = true
 move-bytecode-utils.workspace = true
