--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ build
 storage/
 !narwhal/storage
 
+# Move-related files
+Move.lock
+!crates/sui-framework/Move.lock
+!crates/sui-framework/deps/move-stdlib/Move.lock
+
 # Thumbnails
 ._*
 
