--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -28,9 +28,10 @@
     "build": "node genversion.mjs && pnpm build:types && tsup ./src/index.ts --format esm,cjs --sourcemap",
     "build:types": "tsc --build",
     "doc": "typedoc",
+    "vitest": "vitest",
     "test": "pnpm test:typecheck && pnpm test:unit",
     "test:typecheck": "tsc -p ./test",
-    "test:unit": "vitest run unit",
+    "test:unit": "vitest run unit __tests__",
     "test:e2e": "wait-on http://127.0.0.1:9123 -l --timeout 120000 && vitest run e2e",
     "test:e2e:nowait": "vitest run e2e",
     "prepare:e2e": "cargo build --bin sui-test-validator --bin sui --profile dev && RUST_LOG=info,sui=error,anemo_tower=warn,consensus=off cargo run --bin sui-test-validator",
