--- a/apps/wallet/configs/environment/.env.defaults
+++ b/apps/wallet/configs/environment/.env.defaults
@@ -5,7 +5,7 @@ API_ENV=devNet
 API_ENDPOINT_LOCAL=http://127.0.0.1:5001/
 API_ENDPOINT_LOCAL_FULLNODE=http://127.0.0.1:9000/
 API_ENDPOINT_LOCAL_FAUCET=http://127.0.0.1:9123/gas
-API_ENDPOINT_DEV_NET_FULLNODE=https://fullnode.devnet.sui.io/
+API_ENDPOINT_DEV_NET_FULLNODE=https://wallet-rpc.devnet.sui.io/
 API_ENDPOINT_DEV_NET_FAUCET=https://faucet.devnet.sui.io/gas
 API_ENDPOINT_TEST_NET_FULLNODE=https://fullnode-wallet.testnet.sui.io/
 API_ENDPOINT_TEST_NET_FAUCET=https://faucet.testnet.sui.io/gas
