--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -133,6 +133,10 @@ jobs:
         run: |
           curl -L https://foundry.paradigm.xyz | { cat; echo '$FOUNDRY_BIN_DIR/foundryup'; } | bash
           echo "$HOME/.config/.foundry/bin" >> $GITHUB_PATH
+      - name: Install Foundry Dependencies
+        working-directory: bridge/evm
+        run: |
+            forge install https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable@v5.0.1 https://github.com/foundry-rs/forge-std@v1.3.0 https://github.com/OpenZeppelin/openzeppelin-foundry-upgrades --no-git --no-commit
       - name: cargo test
         run: |
           cargo nextest run --profile ci
@@ -482,7 +486,7 @@ jobs:
         run: |
           curl -L https://foundry.paradigm.xyz | { cat; echo '$FOUNDRY_BIN_DIR/foundryup'; } | bash
           echo "$HOME/.config/.foundry/bin" >> $GITHUB_PATH
-      - name: Install Dependencies
+      - name: Install Foundry Dependencies
         working-directory: bridge/evm
         run: |
           forge install https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable@v5.0.1 https://github.com/foundry-rs/forge-std@v1.3.0 https://github.com/OpenZeppelin/openzeppelin-foundry-upgrades --no-git --no-commit
